--- a/students/stephen-blais.html
+++ b/students/stephen-blais.html
@@ -18,14 +18,14 @@
       <div class="vitals-container">
         <div class="profile-photo"></div>
         <div class="social-icon-container">
-          <a href="#"><img class="social-icon" src="https://s3.amazonaws.com/learn-verified/twitter-icon.png"/></a>
+          <!-- <a href="#"><img class="social-icon" src="https://s3.amazonaws.com/learn-verified/twitter-icon.png"/></a> -->
           <a href="#"><img class="social-icon" src="https://s3.amazonaws.com/learn-verified/linkedin-icon.png"/></a>
           <a href="#"><img class="social-icon" src="https://s3.amazonaws.com/learn-verified/github-icon.png"/></a>
-          <a href="#"><img class="social-icon" src="https://s3.amazonaws.com/learn-verified/rss-icon.png"/></a>
+          <!-- <a href="#"><img class="social-icon" src="https://s3.amazonaws.com/learn-verified/rss-icon.png"/></a> -->
         </div>
         <div class="vitals-text-container">
-          <h1 class="profile-name">Daniel Fenjves</h1>
-          <h2 class="profile-location">New York, NY</h2>
+          <h1 class="profile-name">Stephen Blais</h1>
+          <h2 class="profile-location">Providence, RI</h2>
           <div class="profile-quote">"Forget safety. Live where you fear to live. Destroy your reputation. Be notorious." - Rumi</div>
         </div>
       </div>
