--- a/students/stephen-blais.html
+++ b/students/stephen-blais.html
@@ -22,6 +22,7 @@
           <a href="#"><img class="social-icon" src="https://s3.amazonaws.com/learn-verified/linkedin-icon.png"/></a>
           <a href="#"><img class="social-icon" src="https://s3.amazonaws.com/learn-verified/github-icon.png"/></a>
           <!-- <a href="#"><img class="social-icon" src="https://s3.amazonaws.com/learn-verified/rss-icon.png"/></a> -->
+          <img class="social-icon" src="https://s3.amazonaws.com/learn-verified/instagram-icon.png"/>
         </div>
         <div class="vitals-text-container">
           <h1 class="profile-name">Stephen Blais</h1>
