Automatically backed up by Learn

--- a/students/stephen-blais.html
+++ b/students/stephen-blais.html
@@ -22,7 +22,6 @@
           <a href="#"><img class="social-icon" src="https://s3.amazonaws.com/learn-verified/linkedin-icon.png"/></a>
           <a href="#"><img class="social-icon" src="https://s3.amazonaws.com/learn-verified/github-icon.png"/></a>
           <!-- <a href="#"><img class="social-icon" src="https://s3.amazonaws.com/learn-verified/rss-icon.png"/></a> -->
-          <img class="social-icon" src="https://s3.amazonaws.com/learn-verified/instagram-icon.png"/>
         </div>
         <div class="vitals-text-container">
           <h1 class="profile-name">Stephen Blais</h1>
@@ -37,7 +36,7 @@
               <h3>Biography</h3>
             </div>
             <div class="description-holder">
-              <p>I was in southern California for college (sun and In-n-Out!), rural Oregon for high school (lived in a town with 1500 people and 3000+ cows), and Tokyo for elementary/middle school.</p>
+              <p>Rhode Island born, raised, and returned (after stints in Boston, Chicago, Austin, and Dallas).</p>
             </div>
           </div>
         </div>
@@ -47,8 +46,8 @@
               <h3>Education</h3>
             </div>
             <div class="description-holder">
-              <h4>University of California</h4>
-              <h5>Bachelor of Economics</h5>
+              <h4>Northeaster University</h4>
+              <h5>Bachelor of Psychology and Linguistics</h5>
             </div>
             <div class="description-holder">
               <h4>San Diego State</h4>
@@ -62,12 +61,24 @@
               <h3>Experience</h3>
             </div>
             <div class="description-holder">
-              <h4>H&R Block</h4>
-              <h5>Project Manager</h5>
+              <h4>Fred &amp; Friends</h4>
+              <h5>Traffic Manager / Minister of Operations</h5>
             </div>
             <div class="description-holder">
-              <h4>Coca-Cola Company</h4>
-              <h5>Account Manager</h5>
+              <h4>Freelance Tech Guy</h4>
+              <h5>IT, Web, Graphic Design</h5>
+            </div>
+            <div class="description-holder">
+              <h4>XLG Design</h4>
+              <h5>Technical Producer</h5>
+            </div>
+            <div class="description-holder">
+              <h4>Studio Outside Landscape Architects</h4>
+              <h5>Marketing &amp; IT Assistant</h5>
+            </div>
+            <div class="description-holder">
+              <h4>Freelance Tech Guy</h4>
+              <h5>IT, Web, Graphic Design</h5>
             </div>
           </div>
         </div>
