Automatically backed up by Learn

--- a/students/stephen-blais.html
+++ b/students/stephen-blais.html
@@ -19,8 +19,8 @@
         <div class="profile-photo"></div>
         <div class="social-icon-container">
           <!-- <a href="#"><img class="social-icon" src="https://s3.amazonaws.com/learn-verified/twitter-icon.png"/></a> -->
-          <a href="#"><img class="social-icon" src="https://s3.amazonaws.com/learn-verified/linkedin-icon.png"/></a>
-          <a href="#"><img class="social-icon" src="https://s3.amazonaws.com/learn-verified/github-icon.png"/></a>
+          <a href="https://www.linkedin.com/in/s-blais/"><img class="social-icon" src="https://s3.amazonaws.com/learn-verified/linkedin-icon.png"/></a>
+          <a href="https://github.com/s-blais"><img class="social-icon" src="https://s3.amazonaws.com/learn-verified/github-icon.png"/></a>
           <!-- <a href="#"><img class="social-icon" src="https://s3.amazonaws.com/learn-verified/rss-icon.png"/></a> -->
         </div>
         <div class="vitals-text-container">
@@ -36,7 +36,7 @@
               <h3>Biography</h3>
             </div>
             <div class="description-holder">
-              <p>Rhode Island born, raised, and returned (after stints in Boston, Chicago, Austin, and Dallas).</p>
+              <p>Rhode Island born, raised, and, finally, returned (after stints in Boston, Chicago, Austin, and Dallas).</p>
             </div>
           </div>
         </div>
