Automatically backed up by Learn

--- a/students/stephen-blais.html
+++ b/students/stephen-blais.html
@@ -26,7 +26,7 @@
         <div class="vitals-text-container">
           <h1 class="profile-name">Stephen Blais</h1>
           <h2 class="profile-location">Providence, RI</h2>
-          <div class="profile-quote">"Forget safety. Live where you fear to live. Destroy your reputation. Be notorious." - Rumi</div>
+          <div class="profile-quote">"You are the only you that will ever be." &ndash; Jen Sincero"</div>
         </div>
       </div>
       <div class="details-container">
