--- a/students/stephen-blais.html
+++ b/students/stephen-blais.html
@@ -46,12 +46,8 @@
               <h3>Education</h3>
             </div>
             <div class="description-holder">
-              <h4>Northeaster University</h4>
+              <h4>Northeastern University</h4>
               <h5>Bachelor of Psychology and Linguistics</h5>
-            </div>
-            <div class="description-holder">
-              <h4>San Diego State</h4>
-              <h5>Associate in Business</h5>
             </div>
           </div>
         </div>
@@ -63,18 +59,6 @@
             <div class="description-holder">
               <h4>Fred &amp; Friends</h4>
               <h5>Traffic Manager / Minister of Operations</h5>
-            </div>
-            <div class="description-holder">
-              <h4>Freelance Tech Guy</h4>
-              <h5>IT, Web, Graphic Design</h5>
-            </div>
-            <div class="description-holder">
-              <h4>XLG Design</h4>
-              <h5>Technical Producer</h5>
-            </div>
-            <div class="description-holder">
-              <h4>Studio Outside Landscape Architects</h4>
-              <h5>Marketing &amp; IT Assistant</h5>
             </div>
             <div class="description-holder">
               <h4>Freelance Tech Guy</h4>
