Automatically backed up by Learn

--- a/students/stephen-blais.html
+++ b/students/stephen-blais.html
@@ -36,7 +36,7 @@
               <h3>Biography</h3>
             </div>
             <div class="description-holder">
-              <p>Rhode Island born, raised, and, finally, returned (after stints in Boston, Chicago, Austin, and Dallas).</p>
+              <p>Rhode Island born, raised, and, finally, returned (after stints in Boston, Chicago, Austin, and Dallas). Enhancing existing skills and brewing up new ones for some career adventures, and petting cats along the way.</p>
             </div>
           </div>
         </div>
