--- a/students/stephen-blais.html
+++ b/students/stephen-blais.html
@@ -18,15 +18,15 @@
       <div class="vitals-container">
         <div class="profile-photo"></div>
         <div class="social-icon-container">
-          <a href="#"><img class="social-icon" src="https://s3.amazonaws.com/learn-verified/twitter-icon.png"/></a>
-          <a href="#"><img class="social-icon" src="https://s3.amazonaws.com/learn-verified/linkedin-icon.png"/></a>
-          <a href="#"><img class="social-icon" src="https://s3.amazonaws.com/learn-verified/github-icon.png"/></a>
-          <a href="#"><img class="social-icon" src="https://s3.amazonaws.com/learn-verified/rss-icon.png"/></a>
+          <!-- <a href="#"><img class="social-icon" src="https://s3.amazonaws.com/learn-verified/twitter-icon.png"/></a> -->
+          <a href="https://www.linkedin.com/in/s-blais/"><img class="social-icon" src="https://s3.amazonaws.com/learn-verified/linkedin-icon.png"/></a>
+          <a href="https://github.com/s-blais"><img class="social-icon" src="https://s3.amazonaws.com/learn-verified/github-icon.png"/></a>
+          <!-- <a href="#"><img class="social-icon" src="https://s3.amazonaws.com/learn-verified/rss-icon.png"/></a> -->
         </div>
         <div class="vitals-text-container">
-          <h1 class="profile-name">Daniel Fenjves</h1>
-          <h2 class="profile-location">New York, NY</h2>
-          <div class="profile-quote">"Forget safety. Live where you fear to live. Destroy your reputation. Be notorious." - Rumi</div>
+          <h1 class="profile-name">Stephen Blais</h1>
+          <h2 class="profile-location">Providence, RI</h2>
+          <div class="profile-quote">"You are the only you that will ever be."  &mdash;&nbsp;Jen&nbsp;Sincero</div>
         </div>
       </div>
       <div class="details-container">
@@ -36,7 +36,7 @@
               <h3>Biography</h3>
             </div>
             <div class="description-holder">
-              <p>I was in southern California for college (sun and In-n-Out!), rural Oregon for high school (lived in a town with 1500 people and 3000+ cows), and Tokyo for elementary/middle school.</p>
+              <p>Rhode Island born, raised, and, finally, returned (after stints in Boston, Chicago, Austin, and Dallas). Enhancing existing skills and brewing up new ones for some career adventures, and petting cats along the way.</p>
             </div>
           </div>
         </div>
@@ -46,12 +46,8 @@
               <h3>Education</h3>
             </div>
             <div class="description-holder">
-              <h4>University of California</h4>
-              <h5>Bachelor of Economics</h5>
-            </div>
-            <div class="description-holder">
-              <h4>San Diego State</h4>
-              <h5>Associate in Business</h5>
+              <h4>Northeastern University</h4>
+              <h5>Bachelor of Psychology and Linguistics</h5>
             </div>
           </div>
         </div>
@@ -61,12 +57,12 @@
               <h3>Experience</h3>
             </div>
             <div class="description-holder">
-              <h4>H&R Block</h4>
-              <h5>Project Manager</h5>
+              <h4>Fred &amp; Friends</h4>
+              <h5>Traffic Manager / Minister of Operations</h5>
             </div>
             <div class="description-holder">
-              <h4>Coca-Cola Company</h4>
-              <h5>Account Manager</h5>
+              <h4>Freelance Tech Guy</h4>
+              <h5>IT, Web, Graphic Design</h5>
             </div>
           </div>
         </div>
